# workflow-automation

./: .gitignore  docker-compose.yml  package-lock.json  package.json
app/: layout.js  page.js
app/api/workflows/parse/: route.js
app/compliance/: page.js
app/dashboard/: layout.js  page.js
app/dashboard/activity/: page.js
app/dashboard/executions/: page.js
app/dashboard/new/: page.js
app/dashboard/workflows/: page.js
app/login/: page.js
app/privacy/: page.js
app/support/: page.js
app/tos/: page.js
backend/: -H  Dockerfile  pyproject.toml  test_api.py  test_chains.py
backend/app/: main.py
backend/app/api/: auth_routes.py  routes.py  temporal_routes.py
backend/app/core/: auth.py  redis_client.py  supabase_service.py  workflow_engine.py
backend/app/langgraph/: cached_nodes.py  prompts.py  redis_integration.py  routes.py  schemas.py  test_cached_workflow.py  workflow_session.py
backend/app/langgraph/chains/: data_extractor.py  decision_maker.py
backend/app/templates/: login.html  signup.html
backend/app/temporal/: client.py  test_connection.py  worker.py
backend/app/temporal/activities/: langgraph_triggers.py
backend/app/temporal/config/: config_template.yaml
backend/app/temporal/workflows/: ai_orchestration.py  client_intake_graph.py  scheduled_workflows.py  workflow_builder.py  workflow_engine.py
components/: CookieBanner.js  Toast.js
frontend/app/: error.js
frontend/app/api/workflows/: route.js
frontend/app/dashboard/: layout.js
frontend/components/: LoadingStates.js
lib/: api-client.js  api.js
(+2 files in other folders)
